<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".detail.DetailActivity">
    <ImageView
        android:id="@+id/imageBackDrop"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_launcher_background"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackDrop"
        app:layout_constraintStart_toEndOf="@id/imageBackDrop"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_judul"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rating"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tanggal_rilis"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:text="@string/text_overview"
        android:id="@+id/textOverviewLabel"
        app:layout_constraintTop_toBottomOf="@id/imageBackDrop"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:ellipsize="end"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textOverviewLabel"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>